Fix wrapping of links on multiple lines

--- a/styles.css
+++ b/styles.css
@@ -80,14 +80,15 @@
 	flex-direction: row;
 	justify-content: space-between;
 	.bouquets,
-	.arrangements,
 	.events,
 	.care {
 		flex-basis: 150px;
 	}
-
+	.arrangements {
+		flex-basis: 180px;
+	}
 	.plants {
-		flex-basis: 250px;
+		flex-basis: 220px;
 	}
 }
 
